name:                diagrams-gl
version:             0.1.0.0
synopsis:            OpenGL backend for diagrams
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
-- copyright:           
category:            Graphics
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Diagrams.Backend.GL
    Diagrams.Backend.GL.Util
    Diagrams.Backend.GL.Lines
    Diagrams.Backend.GL.Basic
    Diagrams.Backend.GL.Text
    Diagrams.Backend.GL.TwoD
  -- other-modules:       
  other-extensions:
    DeriveDataTypeable,
    FlexibleContexts,
    FlexibleInstances,
    GADTs,
    MultiParamTypeClasses,
    NoMonomorphismRestriction,
    TypeFamilies
  build-depends:
    base >=4.9 && <5.0,
    mtl,
    bytestring,
    hashable,
    optparse-applicative,
    directory,
    filepath,
    diagrams >=2.0 && <2.1,
    geometry >=0.1 && <0.2,
    containers,
    letters,
    unordered-containers,
    primitive,
    file-embed,
    lens,
    vector,
    colour,
    linear,
    gl,
    nanovg
  hs-source-dirs:      src
  ghc-options: -Wall
  default-language:    Haskell2010
